# animal-classification

./: .gitignore  README.md  __init__.py  pyproject.toml  readme.md  requirements.txt  to_do.txt
animal_classification/: Untitled.ipynb  __init__.py  dataset.py  delete_data.py  download_data.py  medias_rgb_por_clase.csv  reduce_data.py  utils.py
animal_classification/app/: __init__.py  dashboard.py
animal_classification/modeling/: __init__.py  architecture.py  inference.py  metrics.py  train.py
animal_classification/preprocessing/: __init__.py  dataset.py  delete_data.py  download_data.py  reduce_data.py
animal_classification/scripts/: __init__.py  dashboard.py
docs/: Proyecto 1 Develop and Software.html  animal_classification.html  index.html  index.md  my_projects.html  search.js
docs/Proyecto 1 Develop and Software/: data.html  my_projects.html
docs/Proyecto 1 Develop and Software/my_projects/: dataset.html  modeling.html  plots.html
docs/Proyecto 1 Develop and Software/my_projects/modeling/: train.html
docs/animal-classification/animal-classification/: my_projects.html
docs/animal-classification/animal-classification/my_projects/: dataset.html  download_data.html  modeling.html  plots.html  reduce_data.html  scripts.html
docs/animal-classification/animal-classification/my_projects/modeling/: inference.html  train.html
docs/animal-classification/animal-classification/my_projects/scripts/: dashboard.html
docs/animal_classification/: app.html  dataset.html  delete_data.html  download_data.html  modeling.html  plots.html  preprocessing.html  reduce_data.html  scripts.html  utils.html
docs/animal_classification/app/: dashboard.html
docs/animal_classification/modeling/: architecture.html  inference.html  metrics.html  train.html
docs/animal_classification/preprocessing/: dataset.html  delete_data.html  download_data.html  reduce_data.html
docs/animal_classification/scripts/: dashboard.html
docs/my_projects/: dataset.html  download_data.html  modeling.html  plots.html  reduce_data.html  scripts.html
docs/my_projects/modeling/: inference.html  train.html
docs/my_projects/scripts/: dashboard.html
my_projects/: __init__.py  dataset.py  delete_data.py  download_data.py  plots.py  reduce_data.py
my_projects/modeling/: __init__.py  inference.py  train.py
my_projects/scripts/: __init__.py  dashboard.py  light_demo.py
notebooks/: Proyect 1 Animals Image Dataset.ipynb  analysis_utils.py  plots_metrics.ipynb  trying_gradio.ipynb
reports/: report.md
scripts/: dashboard.py
