[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["animal_classification*"]

[tool.setuptools.package-data]
"animal_classification" = ["data/mini_animals/**/*"]

[project]
name = "animal-classification-aldanondo-malon"
version = "0.2.0"
description = "A deep learning project to classify 90 animals using VGG architectures."
readme = "README.md"
requires-python = ">=3.10,<=3.13"
license = "MIT"

authors = [
{ name = "Andrés Malón", email = "andresmalon@gmail.com" },
{ name = "Roberto Aldanondo", email = "robertoaj02@gmail.com" }
]

dependencies = [
"torch>=2.8.0",         # ⬅️ FIX 1: Aligning to newer version that supports sm_120 (Blackwell)
"torchvision>=0.23.0",  # ⬅️ FIX 2: Aligning to newer compatible version
"lightning>=2.5.5",     # ⬅️ FIX 3: Aligning to newer compatible version
"pillow>=10.0.0",
"kagglehub>=0.2.0",
"gradio>=4.44.1",
"numpy>=2.0.2",
"pandas>=2.3.0",
"seaborn>=0.13.2",
"matplotlib>=3.9.4",
"scikit-learn>=1.6.1"
]

[project.optional-dependencies]
dev = ["pdoc>=15.0.4"]
cli = ["kagglehub"]
gpu = [
"torch>=2.8.0",         # ⬅️ FIX 4: Aligning GPU version
"torchvision>=0.23.0",  # ⬅️ FIX 5: Aligning GPU version
"torchaudio>=2.8.0"     # ⬅️ FIX 6: Aligning GPU version
]

[project.urls]
Homepage = "https://github.com/yourusername/animal-classification"
Repository = "https://github.com/yourusername/animal-classification"

[project.scripts]
animal-train = "animal_classification.modeling.train:main"
animal-infer = "animal_classification.modeling.inference:main"
animal-dashboard = "animal_classification.scripts.dashboard:main"
animal-download-data = "animal_classification.download_data:main"
animal-reduce-data = "animal_classification.reduce_data:main"

[tool.uv]
package = true

#[[tool.uv.index]]
#name = "pytorch-cuda-cu121"
#url = "https://download.pytorch.org/whl/cu121" # 🎯 Target CUDA 12.1
#explicit = true

#[tool.uv.sources]
#torch = [
#{ index = "pytorch-cuda-cu121", marker = "extra == 'gpu'" },
#]
#torchvision = [
#{ index = "pytorch-cuda-cu121", marker = "extra == 'gpu'" },
#]
[tool.pdoc]
docformat = "numpy"