[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["animal_classification*"]

[tool.setuptools.package-data]
"animal_classification" = ["data/mini_animals/**/*"]

[project]
name = "animal-classification-aldanondo-malon"
version = "0.2.0"
description = "A deep learning project to classify 90 animals using VGG architectures."
readme = "README.md"
requires-python = ">=3.10,<=3.13"
license = "MIT"

authors = [
{ name = "Andrés Malón", email = "andresmalon@gmail.com" },
{ name = "Roberto Aldanondo", email = "robertoaj02@gmail.com" }
]

dependencies = [
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",
    "lightning>=2.5.5",
    "pillow>=10.0.0",
    "kagglehub>=0.2.0",
    "gradio>=4.44.1",
    "numpy>=2.0.2",
    "pandas>=2.3.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.4",
    "scikit-learn>=1.6.1",
    "twine"
]

[project.optional-dependencies]
dev = ["pdoc>=15.0.4"]
cli = ["kagglehub"]
# This extra acts as a switch to the CPU index in the sources block.
gpu = ["torch>=2.8.0",
    "torchvision>=0.23.0",
    "torchaudio>=2.8.0",]

[project.urls]
Homepage = "https://a139573.github.io/animal-classification/"
Repository = "https://github.com/a139573/animal-classification"

[project.scripts]
animal-train = "animal_classification.modeling.train:main"
animal-infer = "animal_classification.modeling.inference:main"
animal-dashboard = "animal_classification.scripts.dashboard:main"
animal-download-data = "animal_classification.download_data:main"
animal-reduce-data = "animal_classification.reduce_data:main"

[tool.uv]
package = true

# --- UV Configuration to handle CUDA 12.6 (Default) and CPU indices ---

[[tool.uv.index]]
name = "pytorch-cuda-128"
url = "https://download.pytorch.org/whl/cu128" 
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda-126"
url = "https://download.pytorch.org/whl/cu126" 
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# Default (no extra) resolves to CUDA 12.6. [cpu] extra resolves to CPU index.
torch = [
    { index = "pytorch-cuda-128", marker = "extra == 'gpu'" }, 
    #{ index = "pytorch-cpu", marker = "extra == 'cpu'" }
]
torchvision = [
    { index = "pytorch-cuda-126", marker = "extra == 'gpu'" },
    #{ index = "pytorch-cpu", marker = "extra == 'cpu'" }
]
torchaudio = [
    { index = "pytorch-cuda-126", marker = "extra == 'gpu'" },
   # { index = "pytorch-cpu", marker = "extra == 'cpu'" }
]

[tool.pdoc]
docformat = "numpy"